[package]
name    = "metaheuristics"
version = "0.0.11"
authors = ["Alfie John <alfie@alfie.wtf>"]

description   = "Find approximate solutions to your optimisation problem using metaheuristics algorithms"
documentation = "https://www.alfie.wtf/rustdoc/metaheuristics/metaheuristics/"
homepage      = "https://crates.io/crates/metaheuristics"
repository    = "https://github.com/alfiedotwtf/metaheuristics"

license = "GPL-3.0"

[dependencies]
rand = "0.3.10"
time = "0.1.30"
