[package]
name    = "metaheuristics"
version = "1.0.15"
authors = ["Alfie John <alfie@alfie.wtf>"]

description   = "Find approximate solutions to your optimisation problem using metaheuristics algorithms"
documentation = "https://docs.rs/metaheuristics"
homepage      = "https://crates.io/crates/metaheuristics"
repository    = "https://gitlab.com/alfiedotwtf/metaheuristics"

license = "GPL-3.0"

[dependencies]
rand = "0.3.10"
time = "0.1.30"
