[package]
name    = "metaheuristics"
version = "1.0.17"
authors = ["Alfie John <alfie@alfie.wtf>"]

description   = "Find approximate solutions to your optimisation problem using metaheuristics algorithms"
documentation = "https://docs.rs/metaheuristics"
homepage      = "https://crates.io/crates/metaheuristics"
repository    = "https://github.com/alfiedotwtf/metaheuristics"

license = "GPL-3.0"

[dependencies]
rand = "0.8.4"
time = "0.3.5"
